--- a/src/ML.ipynb
+++ b/src/ML.ipynb
@@ -9,13 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "C:/Users/lkxl1/OneDrive/デスクトップ/research/bigendian_data/\n",
       "result   Y,X: 102 51\n",
       "original Y,X: (1025, 513)\n",
       "(102, 51)\n"
@@ -26,16 +27,10 @@
     "import numpy as np \n",
     "import os\n",
     "import random \n",
-    "#擬似乱数を生成するライブラリー \n",
-    "from PIL import Image, ImageOps \n",
-    "#画像処理ライブラリー\n",
+    "# from PIL import Image, ImageOps \n",
     "from sklearn.metrics import accuracy_score \n",
-    "#モデルの正解率を計算するライブラリー\n",
     "import glob \n",
-    "#ファイルパス名を取得するライブラリ\n",
     "import matplotlib.pyplot as plt \n",
-    "#図をプロットするためのライブラリー\n",
-    "\n",
     "from mymodule import myfunc as mf\n",
     "%matplotlib inline\n",
     "\n",
@@ -89,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#雲がない画像ファイルのパスのリストを取得\n",
+    "#リコネクションがない画像ファイルのパスのリストを取得\n",
     "files = glob.glob(PATH0) \n",
     "\n",
     "#出力ディレクトリのパス\n",
@@ -136,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#雲がある画像ファイルのパスのリストを取得\n",
+    "#リコネクションがある画像ファイルのパスのリストを取得\n",
     "files = glob.glob(PATH1) \n",
     "\n",
     "#出力ディレクトリのパス\n",
@@ -155,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -407,39 +402,41 @@
    ],
    "source": [
     "# 訓練データ\n",
-    "num_of_data_clear = len(glob.glob(ALTIMAGES0)) # 雲がない画像の枚数\n",
-    "num_of_data_cloudy = len(glob.glob(ALTIMAGES1)) # 雲がある画像の枚数\n",
+    "num_of_data_clear = len(glob.glob(ALTIMAGES0)) # リコネクションがない画像の枚数\n",
+    "num_of_data_cloudy = len(glob.glob(ALTIMAGES1)) # リコネクションがある画像の枚数\n",
     "num_of_data_total = num_of_data_clear + num_of_data_cloudy # 学習データの全枚数\n",
     "\n",
     "N_col = IMGSHAPE[0]*IMGSHAPE[1]*1 # 行列の列数\n",
     "X_train = np.zeros((num_of_data_total, N_col)) # 学習データ格納のためゼロ行列生成\n",
     "y_train = np.zeros((num_of_data_total)) # 学習データに対するラベルを格納するためのゼロ行列生成\n",
     "\n",
-    "# 雲がない画像を行列に読み込む\n",
+    "# リコネクションがない画像を行列に読み込む\n",
     "path_list = glob.glob(ALTIMAGES0) \n",
     "i_count = 0\n",
     "\n",
-    "def load_regularize(item, type):\n",
-    "    if type == \"b\":\n",
-    "        im = mf.load(item, z=3)\n",
-    "    elif type == \"np\":\n",
+    "def load_regularize(item):\n",
+    "    type = item[:-4]\n",
+    "    if type == \".npy\":\n",
     "        im = np.load(item)\n",
+    "    elif type == \".npz\":\n",
+    "        print(\"npz doesnot supported\")\n",
+    "        return\n",
     "    else:\n",
-    "        raise \"type argument required 'b' or 'np'\"\n",
+    "        im = mf.load(item, z=3)\n",
     "    img_resize = compress(im)\n",
     "    return ((img_resize - min(img_resize.flat)) / max(img_resize.flat)).flat # 正規化\n",
     "\n",
     "for item in path_list:\n",
-    "    X_train[i_count,:] = load_regularize(item, type=\"np\")\n",
-    "    y_train[i_count] = 0 # 雲がないことを表すラベル\n",
+    "    X_train[i_count,:] = load_regularize(item)\n",
+    "    y_train[i_count] = 0 # リコネクションがないことを表すラベル\n",
     "    i_count += 1\n",
     "  \n",
-    "# 雲がある画像を行列に読み込む\n",
+    "# リコネクションがある画像を行列に読み込む\n",
     "path_list = glob.glob(ALTIMAGES1) \n",
     "\n",
     "for item in path_list:\n",
-    "    X_train[i_count,:] = load_regularize(item, type=\"np\")\n",
-    "    y_train[i_count] = 1 # 雲があることを表すラベル\n",
+    "    X_train[i_count,:] = load_regularize(item)\n",
+    "    y_train[i_count] = 1 # リコネクションがあることを表すラベル\n",
     "    i_count += 1"
    ]
   },
@@ -537,29 +534,29 @@
    ],
    "source": [
     "# テストデータ\n",
-    "num_of_data_clear = len(glob.glob(PATH0TEST)) # 雲がない画像の枚数\n",
-    "num_of_data_cloudy = len(glob.glob(PATH1TEST)) # 雲がある画像の枚数\n",
+    "num_of_data_clear = len(glob.glob(PATH0TEST)) # リコネクションがない画像の枚数\n",
+    "num_of_data_cloudy = len(glob.glob(PATH1TEST)) # リコネクションがある画像の枚数\n",
     "num_of_data_total = num_of_data_clear + num_of_data_cloudy # テストデータの全枚数\n",
     "\n",
     "N_col = IMGSHAPE[0]*IMGSHAPE[1]*1 # 行列の列数(RGBなら*3)\n",
     "X_test = np.zeros((num_of_data_total, N_col)) # テストデータ格納のためゼロ行列生成\n",
     "y_test = np.zeros(num_of_data_total) # テストデータに対するラベルを格納するためのゼロ行列生成\n",
     "\n",
-    "# 雲がない画像を行列に読み込む\n",
+    "# リコネクションがない画像を行列に読み込む\n",
     "path_list = glob.glob(PATH0TEST) \n",
     "i_count = 0\n",
     "for item in path_list:\n",
     "\n",
     "    X_test[i_count,:] = load_regularize(item, type=\"b\")\n",
-    "    y_test[i_count] = 0 # 雲がないことを表すラベル\n",
+    "    y_test[i_count] = 0 # リコネクションがないことを表すラベル\n",
     "    i_count += 1\n",
     "\n",
-    "# 雲がある画像を行列に読み込む\n",
+    "# リコネクションがある画像を行列に読み込む\n",
     "path_list = glob.glob(PATH1TEST) \n",
     "\n",
     "for item in path_list:\n",
     "    X_test[i_count,:] = load_regularize(item, type=\"b\")\n",
-    "    y_test[i_count] = 1 # 雲があることを表すラベル\n",
+    "    y_test[i_count] = 1 # リコネクションがあることを表すラベル\n",
     "    i_count += 1 "
    ]
   },
@@ -887,26 +884,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "UnidentifiedImageError",
-     "evalue": "cannot identify image file '../snap/velocityX/01/velocityX.01.01'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnidentifiedImageError\u001b[0m                    Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_6924\\3820625956.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mimg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mImage\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"../snap/velocityX/01/velocityX.01.01\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mimg_rotate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mimg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrotate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m90\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python37\\site-packages\\PIL\\Image.py\u001b[0m in \u001b[0;36mopen\u001b[1;34m(fp, mode)\u001b[0m\n\u001b[0;32m   2929\u001b[0m         \u001b[0mwarnings\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwarn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2930\u001b[0m     raise UnidentifiedImageError(\n\u001b[1;32m-> 2931\u001b[1;33m         \u001b[1;34m\"cannot identify image file %r\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mfilename\u001b[0m \u001b[1;32melse\u001b[0m \u001b[0mfp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2932\u001b[0m     )\n\u001b[0;32m   2933\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mUnidentifiedImageError\u001b[0m: cannot identify image file '../snap/velocityX/01/velocityX.01.01'"
-     ]
-    }
-   ],
-   "source": [
-    "img = Image.open(\"../snap/velocityX/01/velocityX.01.01\")\n",
-    "img_rotate = img.rotate(90)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -933,170 +914,42 @@
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "img = Image.open(\"../imgout/1005/png/density.1.png\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'PngImageFile' object has no attribute 'type'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_6924\\1848194438.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mimg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'PngImageFile' object has no attribute 'type'"
-     ]
-    }
-   ],
-   "source": [
-    "img.type"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['../imgout/MLtest/0\\\\flip_density.01.05.npy',\n",
-       " '../imgout/MLtest/0\\\\flip_density.02.05.npy',\n",
-       " '../imgout/MLtest/0\\\\flip_density.03.05.npy',\n",
-       " '../imgout/MLtest/0\\\\flip_density.04.05.npy',\n",
-       " '../imgout/MLtest/0\\\\flip_density.05.05.npy',\n",
-       " '../imgout/MLtest/0\\\\flip_density.06.05.npy',\n",
-       " '../imgout/MLtest/0\\\\flip_density.07.05.npy',\n",
-       " '../imgout/MLtest/0\\\\flip_density.08.05.npy',\n",
-       " '../imgout/MLtest/0\\\\flip_density.09.05.npy',\n",
-       " '../imgout/MLtest/0\\\\flip_density.10.05.npy',\n",
-       " '../imgout/MLtest/0\\\\flip_density.11.05.npy',\n",
-       " '../imgout/MLtest/0\\\\flip_density.12.05.npy',\n",
-       " '../imgout/MLtest/0\\\\flip_density.13.05.npy',\n",
-       " '../imgout/MLtest/0\\\\flip_density.14.05.npy',\n",
-       " '../imgout/MLtest/0\\\\flip_density.15.05.npy',\n",
-       " '../imgout/MLtest/0\\\\flip_density.16.05.npy',\n",
-       " '../imgout/MLtest/0\\\\flip_density.17.05.npy',\n",
-       " '../imgout/MLtest/0\\\\flip_density.18.05.npy',\n",
-       " '../imgout/MLtest/0\\\\flip_density.19.05.npy',\n",
-       " '../imgout/MLtest/0\\\\flip_density.20.05.npy',\n",
-       " '../imgout/MLtest/0\\\\mirr_density.01.05.npy',\n",
-       " '../imgout/MLtest/0\\\\mirr_density.02.05.npy',\n",
-       " '../imgout/MLtest/0\\\\mirr_density.03.05.npy',\n",
-       " '../imgout/MLtest/0\\\\mirr_density.04.05.npy',\n",
-       " '../imgout/MLtest/0\\\\mirr_density.05.05.npy',\n",
-       " '../imgout/MLtest/0\\\\mirr_density.06.05.npy',\n",
-       " '../imgout/MLtest/0\\\\mirr_density.07.05.npy',\n",
-       " '../imgout/MLtest/0\\\\mirr_density.08.05.npy',\n",
-       " '../imgout/MLtest/0\\\\mirr_density.09.05.npy',\n",
-       " '../imgout/MLtest/0\\\\mirr_density.10.05.npy',\n",
-       " '../imgout/MLtest/0\\\\mirr_density.11.05.npy',\n",
-       " '../imgout/MLtest/0\\\\mirr_density.12.05.npy',\n",
-       " '../imgout/MLtest/0\\\\mirr_density.13.05.npy',\n",
-       " '../imgout/MLtest/0\\\\mirr_density.14.05.npy',\n",
-       " '../imgout/MLtest/0\\\\mirr_density.15.05.npy',\n",
-       " '../imgout/MLtest/0\\\\mirr_density.16.05.npy',\n",
-       " '../imgout/MLtest/0\\\\mirr_density.17.05.npy',\n",
-       " '../imgout/MLtest/0\\\\mirr_density.18.05.npy',\n",
-       " '../imgout/MLtest/0\\\\mirr_density.19.05.npy',\n",
-       " '../imgout/MLtest/0\\\\mirr_density.20.05.npy',\n",
-       " '../imgout/MLtest/0\\\\trns_density.01.05.npy',\n",
-       " '../imgout/MLtest/0\\\\trns_density.02.05.npy',\n",
-       " '../imgout/MLtest/0\\\\trns_density.03.05.npy',\n",
-       " '../imgout/MLtest/0\\\\trns_density.04.05.npy',\n",
-       " '../imgout/MLtest/0\\\\trns_density.05.05.npy',\n",
-       " '../imgout/MLtest/0\\\\trns_density.06.05.npy',\n",
-       " '../imgout/MLtest/0\\\\trns_density.07.05.npy',\n",
-       " '../imgout/MLtest/0\\\\trns_density.08.05.npy',\n",
-       " '../imgout/MLtest/0\\\\trns_density.09.05.npy',\n",
-       " '../imgout/MLtest/0\\\\trns_density.10.05.npy',\n",
-       " '../imgout/MLtest/0\\\\trns_density.11.05.npy',\n",
-       " '../imgout/MLtest/0\\\\trns_density.12.05.npy',\n",
-       " '../imgout/MLtest/0\\\\trns_density.13.05.npy',\n",
-       " '../imgout/MLtest/0\\\\trns_density.14.05.npy',\n",
-       " '../imgout/MLtest/0\\\\trns_density.15.05.npy',\n",
-       " '../imgout/MLtest/0\\\\trns_density.16.05.npy',\n",
-       " '../imgout/MLtest/0\\\\trns_density.17.05.npy',\n",
-       " '../imgout/MLtest/0\\\\trns_density.18.05.npy',\n",
-       " '../imgout/MLtest/0\\\\trns_density.19.05.npy',\n",
-       " '../imgout/MLtest/0\\\\trns_density.20.05.npy']"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "glob.glob(ALTIMAGES0) "
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.6685802 , 0.66858032, 0.66858038, ..., 0.00578028, 0.00577998,\n",
-       "       0.00577924])"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train[0]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(40, 5202)"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.zeros((num_of_data_total, N_col)).shape"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "40"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "num_of_data_total"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
