--- a/src/ML.ipynb
+++ b/src/ML.ipynb
@@ -777,6 +777,7 @@
     }
    ],
    "source": [
+    "from sklearn.model_selection import *\n",
     "train_sizes = np.array([0.1, 0.33, 0.55, 0.78, 1. ]) # 用いる学習データの割合を全体の0.1〜1まで変化させる\n",
     "\n",
     "train_sizes, train_scores_linearSVC, test_scores_linearSVC = learning_curve(\n",
