--- a/src/visualize.ipynb
+++ b/src/visualize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,6 @@
     "\n",
     "from mymodule import myfunc as mf\n",
     "load_dotenv()\n",
-    "data_dir = os.environ[\"bigendian_data\"]\n",
     "imgout = os.environ[\"imgout\"]\n",
     "root_dir = os.environ[\"root_dir\"]\n",
     "snaps_dir = os.environ[\"snaps_dir\"]\n"
@@ -565,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.1 (default, Dec 10 2018, 22:54:23) [MSC v.1915 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
