--- a/src/ML.ipynb
+++ b/src/ML.ipynb
@@ -34,10 +34,10 @@
     "from mymodule import myfunc as mf\n",
     "%matplotlib inline\n",
     "\n",
-    "PATH0 = \"../snap/density/05/*\"#コネクションなし\n",
-    "PATH1 = \"../snap/density/07/*\"#コネクションありに変える\n",
-    "PATH0TEST =\"../snap/density/03/*\"\n",
-    "PATH1TEST =\"../snap/density/08/*\"\n",
+    "PATH0 = glob.glob(\"../snap/density/05/*\")#コネクションなし\n",
+    "PATH1 = glob.glob(\"../snap/density/07/*\")#コネクションありに変える\n",
+    "PATH0TEST = glob.glob(\"../snap/density/03/*\")\n",
+    "PATH1TEST = glob.glob(\"../snap/density/08/*\")\n",
     "ALTIMAGES0 = \"../imgout/MLtest/0/*\"\n",
     "ALTIMAGES1 = \"../imgout/MLtest/1/*\"\n",
     "def compress(array, LEVEL=10):\n",
@@ -85,7 +85,7 @@
    "outputs": [],
    "source": [
     "#リコネクションがない画像ファイルのパスのリストを取得\n",
-    "files = glob.glob(PATH0) \n",
+    "files = PATH0\n",
     "\n",
     "#出力ディレクトリのパス\n",
     "temp_output_dir = ALTIMAGES0\n",
