--- a/src/MLimg.ipynb
+++ b/src/MLimg.ipynb
@@ -27,9 +27,9 @@
     "#図をプロットするためのライブラリー\n",
     "%matplotlib inline\n",
     "\n",
-    "PATH0 = \"../snap/density/5/*\"#コネクションなし\n",
-    "PATH1 = \"../snap/density/7/*\"#コネクションありに変える\n",
-    "PATH0TEST =\"..snap/density/3/*\"\n",
+    "DATA0 = \"../snap/density/5/*\"#コネクションなし\n",
+    "DATA1 = \"../snap/density/7/*\"#コネクションありに変える\n",
+    "DATA1TEST =\"..snap/density/3/*\"\n",
     "PATH1TEST =\"..snap/density/8/*\"\n",
     "ALTIMAGES0 = \"../imgout/MLtest/0/\"\n",
     "ALTIMAGES1 = \"../imgout/MLtest/1/\"\n",
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "#雲がない画像ファイルのパスのリストを取得\n",
-    "files = glob.glob(PATH0) \n",
+    "files = glob.glob(DATA0) \n",
     "\n",
     "#出力ディレクトリのパス\n",
     "temp_output_dir = ALTIMAGES0\n",
@@ -102,7 +102,7 @@
    "outputs": [],
    "source": [
     "#雲がある画像ファイルのパスのリストを取得\n",
-    "files = glob.glob(PATH1) \n",
+    "files = glob.glob(DATA1) \n",
     "\n",
     "#出力ディレクトリのパス\n",
     "temp_output_dir = ALTIMAGES1\n",
@@ -125,8 +125,8 @@
    "outputs": [],
    "source": [
     "# 訓練データ\n",
-    "num_of_data_clear = len(glob.glob(PATH0)) # 雲がない画像の枚数\n",
-    "num_of_data_cloudy = len(glob.glob(PATH1)) # 雲がある画像の枚数\n",
+    "num_of_data_clear = len(glob.glob(DATA0)) # 雲がない画像の枚数\n",
+    "num_of_data_cloudy = len(glob.glob(DATA1)) # 雲がある画像の枚数\n",
     "num_of_data_total = num_of_data_clear + num_of_data_cloudy # 学習データの全枚数\n",
     "\n",
     "N_col = IMGSHAPE[0]*IMGSHAPE[1]*3 # 行列の列数\n",
@@ -166,7 +166,7 @@
    "outputs": [],
    "source": [
     "# テストデータ\n",
-    "num_of_data_clear = len(glob.glob(PATH0TEST)) # 雲がない画像の枚数\n",
+    "num_of_data_clear = len(glob.glob(DATA1TEST)) # 雲がない画像の枚数\n",
     "num_of_data_cloudy = len(glob.glob(PATH1TEST)) # 雲がある画像の枚数\n",
     "num_of_data_total = num_of_data_clear + num_of_data_cloudy # テストデータの全枚数\n",
     "\n",
