--- a/src/imgsprit.ipynb
+++ b/src/imgsprit.ipynb
@@ -12,7 +12,8 @@
     "import glob\n",
     "import os\n",
     "indir = \"../AVS/\"\n",
-    "outdir = \"../imgout/AVSsprit/\"\n"
+    "# outdir = \"../imgout/AVSsprit/\"\n",
+    "outdir  = \"../imgout/sprittest/\"\n"
    ]
   },
   {
@@ -48,12 +49,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sep = [[60,210],[190,305],[300,410],[400,530],[495,580]]\n",
+    "\n",
+    "for s in range(len(sep)):\n",
+    "    for path in glob.glob(f\"{indir}*.jpg\"):\n",
+    "\n",
+    "        name = os.path.basename(path)\n",
+    "        im = cv2.imread(path)[103:408,sep[s][0]:sep[s][1]]\n",
+    "        cv2.imwrite(outdir + f\"{s}/{s}_{name}\", im)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -67,12 +77,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.7.1 (default, Dec 10 2018, 22:54:23) [MSC v.1915 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6421c100b89c4feb9fb005f61fb54da3e1e62cfff126d543998553caed03568c"
+    "hash": "f042362ee065dc60858c472817d1d4759aa3f58fd79a86ac939381b13a520f6f"
    }
   }
  },
