ml fix, keras new

--- a/src/streamplot.ipynb
+++ b/src/streamplot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "import cv2\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "\n",
+    "import glob\n",
     "from mymodule import myfunc as mf\n",
     "load_dotenv()\n",
     "imgout = os.environ[\"imgout\"]\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
     "    # plot = plt.pcolor(rad, cmap=\"bwr\")\n",
     "    #strm = plt.streamplot(X, Y, u, v, density=[5], color=color, arrowstyle='-', linewidth=1,cmap=\"rainbow\")\n",
     "    # strm = plt.streamplot(X, Y, u, v, density=[3], color=rot, arrowstyle='-', linewidth=lw,cmap=\"rainbow\")\n",
-    "    strm = plt.streamplot(X, Y, u, v, density=[10], color=\"black\", arrowstyle='-', linewidth=1.5,cmap=\"bwr\", minlength=0.001)\n",
+    "    strm = plt.streamplot(X, Y, u, v, density=[5], color=\"black\", arrowstyle='-', linewidth=1.5,cmap=\"bwr\", minlength=0.001)\n",
     "\n",
     "\n",
     "    #strm = plt.streamplot(X, Y, u, v, density=[1,5], color=black, arrowstyle='-|>', linewidth=1)\n",
@@ -100,13 +100,13 @@
     "    # plt.show()\n",
     "\n",
     "number =0\n",
-    "xranges = [[10,90],[70,120],[90,160],[140,190],[190,250],[230,300]]\n",
+    "xranges = [[10,70],[60,120],[110,150],[140,190],[170,250],[230,300]]\n",
     "yranges = [[400,650]]\n",
     "for yrange in yranges:\n",
     "    for xrange in xranges:\n",
     "        number += 1\n",
-    "        for job in [13]:#[8,10,11,12,13,14]:\n",
-    "            for para in range(1,21,20):\n",
+    "        for job in [7,8,9,10,11,12,13,14]:\n",
+    "            for para in range(1,80,79):\n",
     "                try:\n",
     "                    dataX = mf.load(mf.gen_snap_path(\"magfieldX\",para,job), z=3)\n",
     "                    dataY = mf.load(mf.gen_snap_path(\"magfieldY\",para,job), z=3)\n",
@@ -116,7 +116,7 @@
     "                stream =stream_plt(dataX,dataY, xrange=xrange, yrange=yrange)\n",
     "        \n",
     "                #plt.savefig(f\"{imgout}1018magline/stream.{'{0:02d}'.format(job)}.{'{0:02d}'.format(para)}.png\")\n",
-    "                plt.savefig(f\"{imgout}1025strm49/{number}/stream.{'{0:02d}'.format(job)}.{'{0:02d}'.format(para)}.png\")\n",
+    "                plt.savefig(f\"{imgout}1025strm49/{number}/stream{number}.{'{0:02d}'.format(job)}.{'{0:02d}'.format(para)}.png\")\n",
     "                plt.close()\n",
     "        \n",
     "\n",
@@ -135,18 +135,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[304, 314, 324, 334, 344, 354, 364, 374]"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
