--- a/src/imgsprit.ipynb
+++ b/src/imgsprit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,14 +11,20 @@
     "import matplotlib.pyplot as plt\n",
     "import glob\n",
     "import os\n",
-    "indir = \"../AVS/\"\n",
+    "from dotenv import load_dotenv\n",
+    "from mymodule import myfunc as mf\n",
+    "load_dotenv()\n",
+    "imgout = os.environ[\"imgout\"]\n",
+    "root_dir = os.environ[\"root_dir\"]\n",
+    "snaps_dir = os.environ[\"snaps_dir\"]\n",
+    "indir = \"../Images/\"\n",
     "# outdir = \"../imgout/AVSsprit/\"\n",
-    "outdir  = \"../imgout/sprittest/\"\n"
+    "outdir  = \"../imgout/77AVSsprit/\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,18 +35,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../Images/img00_00554.jpg\n",
+      "../Images/img00_00554.jpg\n",
+      "../Images/img00_00554.jpg\n",
+      "../Images/img00_00554.jpg\n",
+      "../Images/img00_00554.jpg\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "\n",
     "sep = [[60,210],[190,305],[300,410],[400,530],[495,580]]\n",
     "\n",
     "for s in range(len(sep)):\n",
-    "    for path in glob.glob(f\"{indir}*.jpg\"):\n",
-    "\n",
+    "    #for path in glob.glob(f\"{indir}*.jpg\"):\n",
+    "    for path in [f\"{indir}img00_00554.jpg\"]:\n",
+    "        print(path)\n",
+    "        \n",
     "        name = os.path.basename(path)\n",
-    "        im = cv2.imread(path)[103:408,sep[s][0]:sep[s][1]]\n",
+    "        im = cv2.imread(path)[:,sep[s][0]:sep[s][1]]\n",
     "        cv2.imwrite(outdir + f\"{s}/{s}_{name}\", im)"
    ]
   },
@@ -63,7 +84,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -77,12 +98,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1 (default, Dec 10 2018, 22:54:23) [MSC v.1915 64 bit (AMD64)]"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f042362ee065dc60858c472817d1d4759aa3f58fd79a86ac939381b13a520f6f"
+    "hash": "6421c100b89c4feb9fb005f61fb54da3e1e62cfff126d543998553caed03568c"
    }
   }
  },
