splitter name changed and add description.txt

--- a/src/imgsplit.ipynb
+++ b/src/imgsplit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,52 +17,31 @@
     "imgout = os.environ[\"imgout\"]\n",
     "root_dir = os.environ[\"root_dir\"]\n",
     "snaps_dir = os.environ[\"snaps_dir\"]\n",
-    "indir = \"../Images/\"\n",
-    "# outdir = \"../imgout/AVSsprit/\"\n",
-    "outdir  = \"../imgout/77AVSsprit/\"\n"
+    "indir = imgout + \"77AVS/\"\n",
+    "# outdir = \"../imgout/AVSsplit/\"\n",
+    "outdir  = \"../imgout/77AVSsplit/\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def infile(num):\n",
-    "    num = \"{:03}\".format(num)\n",
-    "    return f\"{indir}img00_00{num}.jpg\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../Images/img00_00554.jpg\n",
-      "../Images/img00_00554.jpg\n",
-      "../Images/img00_00554.jpg\n",
-      "../Images/img00_00554.jpg\n",
-      "../Images/img00_00554.jpg\n"
-     ]
-    }
-   ],
-   "source": [
+    "sep = [[120,440],[380,700],[630,950],[890,1210],[1200,1520],[1460,1780],[1720,2040],[1980,2300],[2240,2560]]\n",
     "\n",
-    "\n",
-    "sep = [[60,210],[190,305],[300,410],[400,530],[495,580]]\n",
-    "\n",
+    "for path in glob.glob(f\"{indir}*.jpg\"):\n",
+    "# for path in [f\"{indir}img00_00554.jpg\"]:        \n",
+    "    im = cv2.imread(path)\n",
+    "    name = os.path.basename(path)\n",
+    "    for s in range(len(sep)):\n",
+    "        separated_im = im[:,sep[s][0]:sep[s][1]]\n",
+    "        cv2.imwrite(outdir + f\"{s}/{s}_{name}\", separated_im)\n",
     "for s in range(len(sep)):\n",
-    "    #for path in glob.glob(f\"{indir}*.jpg\"):\n",
-    "    for path in [f\"{indir}img00_00554.jpg\"]:\n",
-    "        print(path)\n",
-    "        \n",
-    "        name = os.path.basename(path)\n",
-    "        im = cv2.imread(path)[:,sep[s][0]:sep[s][1]]\n",
-    "        cv2.imwrite(outdir + f\"{s}/{s}_{name}\", im)"
+    "    for path in glob.glob(f\"{outdir}{s}\"):\n",
+    "        f = open(f\"{path}/discription_{s}.txt\", mode = \"w\")\n",
+    "        f.write(f\"このファイルは{os.path.basename(os.path.dirname(indir))}{im.shape}を\\n{sep[s][0]}:{sep[s][1]}\\nで切り取った\")\n",
+    "        f.close()"
    ]
   },
   {
@@ -71,6 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#古いコード\n",
     "sep = [[60,210],[190,305],[300,410],[400,530],[495,580]]\n",
     "\n",
     "for s in range(len(sep)):\n",
