splitter name changed and add description.txt

--- a/src/imgsplit.ipynb
+++ b/src/imgsplit.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "        cv2.imwrite(outdir + f\"{s}/{s}_{name}\", separated_im)\n",
     "for s in range(len(sep)):\n",
     "    for path in glob.glob(f\"{outdir}{s}\"):\n",
-    "        f = open(f\"{path}/discription_{s}.txt\", mode = \"w\")\n",
+    "        f = open(f\"{path}/description_{s}.txt\", mode = \"w\")\n",
     "        f.write(f\"このファイルは{os.path.basename(os.path.dirname(indir))}{im.shape}を\\n{sep[s][0]}:{sep[s][1]}\\nで切り取った\")\n",
     "        f.close()"
    ]
