csv name modified

--- a/src/imgsplit.ipynb
+++ b/src/imgsplit.ipynb
@@ -19,7 +19,7 @@
     "snaps_dir = os.environ[\"snaps_dir\"]\n",
     "indir = imgout + \"77AVS/\"\n",
     "# outdir = \"../imgout/AVSsplit/\"\n",
-    "outdir  = \"../imgout/77AVSsplit2/\"\n"
+    "outdir  = \"../imgout/77AVSsplit1/\"\n"
    ]
   },
   {
@@ -435,11 +435,11 @@
     }
    ],
    "source": [
-    "#o点が見えるように分けた\n",
-    "# sep = [[120,440],[380,700],[630,950],[890,1210],[1200,1520],[1460,1780],[1720,2040],[1980,2300],[2240,2560]]\n",
+    "#o点が見えるように分けた 77AVSsplit1\n",
+    "sep = [[120,440],[380,700],[630,950],[890,1210],[1200,1520],[1460,1780],[1720,2040],[1980,2300],[2240,2560]]\n",
     "\n",
-    "#X点が見えるように分けた\n",
-    "sep = [[270,590],[520,840],[770,1090],[1000,1320],[1320,1640],[1580,1900],[1890,2210],[2100,2420],[2360,2680]]\n",
+    "#X点が見えるように分けた 77AVSsplit2\n",
+    "# sep = [[270,590],[520,840],[770,1090],[1000,1320],[1320,1640],[1580,1900],[1890,2210],[2100,2420],[2360,2680]]\n",
     "sepy = [330,650]\n",
     "for s in range(len(sep)):\n",
     "    for path in glob.glob(f\"{outdir}{s}\"):\n",
@@ -474,7 +474,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -488,12 +488,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.7.8 (tags/v3.7.8:4b47a5b6ba, Jun 28 2020, 08:53:46) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6421c100b89c4feb9fb005f61fb54da3e1e62cfff126d543998553caed03568c"
+    "hash": "0a54084e6b208ee8d1ce3989ffc20924477a5f55f5a43e22e699a6741623861e"
    }
   }
  },
