--- a/src/imgsplit.ipynb
+++ b/src/imgsplit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -441,11 +441,6 @@
     "#X点が見えるように分けた 77AVSsplit2\n",
     "# sep = [[270,590],[520,840],[770,1090],[1000,1320],[1320,1640],[1580,1900],[1890,2210],[2100,2420],[2360,2680]]\n",
     "sepy = [330,650]\n",
-    "for s in range(len(sep)):\n",
-    "    for path in glob.glob(f\"{outdir}{s}\"):\n",
-    "        f = open(f\"{path}/description_{s}.txt\", mode = \"w\")\n",
-    "        f.write(f\"このファイルは{os.path.basename(os.path.dirname(indir))}{im.shape}を\\n X{sep[s][0]}:{sep[s][1]}\\n Y{sepy[0]}:{sepy[1]}\\nで切り取った\")\n",
-    "        f.close()\n",
     "for path in glob.glob(f\"{indir}*.jpg\"):\n",
     "# for path in [f\"{indir}img00_00554.jpg\"]:\n",
     "    print(path)        \n",
@@ -453,7 +448,12 @@
     "    name = os.path.basename(path)\n",
     "    for s in range(len(sep)):\n",
     "        separated_im = im[sepy[0]:sepy[1],sep[s][0]:sep[s][1]]\n",
-    "        cv2.imwrite(outdir + f\"{s}/{s}_{name}\", separated_im)"
+    "        cv2.imwrite(outdir + f\"{s}/{s}_{name}\", separated_im)\n",
+    "for s in range(len(sep)):\n",
+    "    for path in glob.glob(f\"{outdir}{s}\"):\n",
+    "        f = open(f\"{path}/description_{s}.txt\", mode = \"w\")\n",
+    "        f.write(f\"このファイルは{os.path.basename(os.path.dirname(indir))}{im.shape}を\\n X{sep[s][0]}:{sep[s][1]}\\n Y{sepy[0]}:{sepy[1]}\\nで切り取った\")\n",
+    "        f.close()"
    ]
   },
   {
@@ -474,7 +474,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -488,12 +488,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8 (tags/v3.7.8:4b47a5b6ba, Jun 28 2020, 08:53:46) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0a54084e6b208ee8d1ce3989ffc20924477a5f55f5a43e22e699a6741623861e"
+    "hash": "6421c100b89c4feb9fb005f61fb54da3e1e62cfff126d543998553caed03568c"
    }
   }
  },
