--- a/src/ML.ipynb
+++ b/src/ML.ipynb
@@ -26,7 +26,6 @@
     "import numpy as np \n",
     "import os\n",
     "import random \n",
-    "# from PIL import Image, ImageOps \n",
     "from sklearn.metrics import accuracy_score \n",
     "from sklearn.metrics import classification_report\n",
     "import glob \n",
@@ -34,7 +33,7 @@
     "from mymodule import myfunc as mf\n",
     "from dotenv import load_dotenv\n",
     "import pandas as pd\n",
-    "from PIL import Image, ImageOps \n",
+    "from PIL import Image\n",
     "%matplotlib inline\n",
     "load_dotenv()\n",
     "imgout = os.environ[\"imgout\"]\n",
