--- a/src/streamplot.ipynb
+++ b/src/streamplot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,15 +105,15 @@
     "        \n",
     "\n",
     "######################\n",
-    "para = 1\n",
-    "job =14\n",
-    "datax = mf.load(r\"C:\\Users\\lkxl1\\OneDrive\\デスクトップ\\research\\src\\mymodule\\StreamLines\\magfield1\")\n",
-    "datay = mf.load(r\"C:\\Users\\lkxl1\\OneDrive\\デスクトップ\\research\\src\\mymodule\\StreamLines\\magfield2\")\n",
-    "datax = mf.load(mf.gen_snap_path(\"magfieldX\",para,job), z=3)\n",
-    "datay = mf.load(mf.gen_snap_path(\"magfieldY\",para,job), z=3)\n",
-    "datax = np.load(r\"C:\\Users\\lkxl1\\OneDrive\\デスクトップ\\research\\imgout\\snap49split1\\magfieldx\\0\\0_magfieldx.01.14.npy\")\n",
-    "datay = np.load(r\"C:\\Users\\lkxl1\\OneDrive\\デスクトップ\\research\\imgout\\snap49split1\\magfieldy\\0\\0_magfieldy.01.14.npy\")\n",
-    "stream_plt(datax,datay)"
+    "# para = 1\n",
+    "# job =14\n",
+    "# datax = mf.load(r\"C:\\Users\\lkxl1\\OneDrive\\デスクトップ\\research\\src\\mymodule\\StreamLines\\magfield1\")\n",
+    "# datay = mf.load(r\"C:\\Users\\lkxl1\\OneDrive\\デスクトップ\\research\\src\\mymodule\\StreamLines\\magfield2\")\n",
+    "# datax = mf.load(mf.gen_snap_path(\"magfieldX\",para,job), z=3)\n",
+    "# datay = mf.load(mf.gen_snap_path(\"magfieldY\",para,job), z=3)\n",
+    "# datax = np.load(r\"C:\\Users\\lkxl1\\OneDrive\\デスクトップ\\research\\imgout\\snap49split1\\magfieldx\\0\\0_magfieldx.01.14.npy\")\n",
+    "# datay = np.load(r\"C:\\Users\\lkxl1\\OneDrive\\デスクトップ\\research\\imgout\\snap49split1\\magfieldy\\0\\0_magfieldy.01.14.npy\")\n",
+    "# stream_plt(datax,datay)"
    ]
   },
   {
@@ -153,7 +153,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.1 ('base')",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -167,12 +167,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f042362ee065dc60858c472817d1d4759aa3f58fd79a86ac939381b13a520f6f"
+    "hash": "6421c100b89c4feb9fb005f61fb54da3e1e62cfff126d543998553caed03568c"
    }
   }
  },
