--- a/src/ML.ipynb
+++ b/src/ML.ipynb
@@ -36,7 +36,7 @@
     "from PIL import Image\n",
     "%matplotlib inline\n",
     "load_dotenv()\n",
-    "imgout = os.environ[\"imgout\"]\n",
+    "# imgout = os.environ[\"imgout\"]\n",
     "root_dir = os.environ[\"root_dir\"]\n",
     "\n",
     "np.random.seed(0) \n",
@@ -75,7 +75,7 @@
     "    test1 size:\n",
     "    IMGSHAPE:\n",
     "    dataset:??\n",
-    "    label source:{LABEL_SOURCE} and {JUDGE_COLUMN}\n",
+    "    LABEL_SOURCE:and JUDGE_COLUMN\n",
     "    DO_PCA?, PCAscore\n",
     "    test, pred, approach\n",
     "        metrics, summary\n",
@@ -1119,7 +1119,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3.7.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1133,12 +1133,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.7.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6421c100b89c4feb9fb005f61fb54da3e1e62cfff126d543998553caed03568c"
+    "hash": "0a54084e6b208ee8d1ce3989ffc20924477a5f55f5a43e22e699a6741623861e"
    }
   }
  },
