--- a/src/imgsplit.ipynb
+++ b/src/imgsplit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5021,6 +5021,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# half"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "def halfsplit(path):\n",
+    "    data  = mf.load(path)\n",
+    "    # print(data.shape)\n",
+    "    half = data[:, :257]\n",
+    "    np.save(path, half)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for path in glob.glob(\"../snap/half/*/*/*/*\"):\n",
+    "    halfsplit(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "778\n",
+      "778\n",
+      "886\n",
+      "886\n",
+      "791\n",
+      "791\n"
+     ]
+    }
+   ],
+   "source": [
+    "indirs  = [\"../snap/half/snap77/\", \"../snap/half/snap49/\", \"../snap/half/snap497/\"]\n",
+    "for indir in indirs:\n",
+    "    a = glob.glob(indir+\"magfieldx/*/*.npy\")\n",
+    "    r = a[400:]\n",
+    "    l = a[:400]\n",
+    "    print(len(r) + len(l))\n",
+    "    print(len(a))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -5030,7 +5089,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.1 ('base')",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -5044,12 +5103,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f042362ee065dc60858c472817d1d4759aa3f58fd79a86ac939381b13a520f6f"
+    "hash": "6421c100b89c4feb9fb005f61fb54da3e1e62cfff126d543998553caed03568c"
    }
   }
  },
