--- a/src/doitonce.ipynb
+++ b/src/doitonce.ipynb
@@ -2,34 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from PIL import Image\n",
-    "import cv2\n",
+    "# from PIL import Image\n",
+    "# import cv2\n",
     "import matplotlib.pyplot as plt\n",
     "import glob\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
     "from mymodule import myfunc as mf\n",
+    "\n",
     "load_dotenv()\n",
     "root_dir = os.environ[\"root_dir\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FileExistsError\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "indirs  = [\"../snap/half/snap77/\", \"../snap/half/snap49/\", \"../snap/half/snap497/\"]\n",
     "outdir = \"../imgout/ohnolic/\"\n",
@@ -45,12 +38,16 @@
     "    try:\n",
     "        os.mkdir(newoutdir)\n",
     "    except:\n",
-    "        print(\"FileExistsError\")\n",
+    "        print(f\"{newoutdir} is already exist\")\n",
     "    binarypaths = glob.glob(indir+\"magfieldx/*/*.npy\")\n",
     "    for xfile in binarypaths[-1:]:\n",
     "        yfile = xfile.replace(\"magfieldx\", \"magfieldy\")\n",
     "        out = f\"{newoutdir}lic_{basename}.{xfile[-9:-4]}.bmp\"\n",
-    "        mf.ohno_lic(xfile, yfile, out)\n",
+    "        if os.path.exists(out):\n",
+    "            continue\n",
+    "        else:\n",
+    "            mf.ohno_lic(xfile, yfile, out)\n",
+    "            print(\"ohno\" + out)\n",
     "        print(out)\n",
     "\n",
     "\n",
@@ -71,7 +68,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3.7.1 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -85,12 +82,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.7.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6421c100b89c4feb9fb005f61fb54da3e1e62cfff126d543998553caed03568c"
+    "hash": "f042362ee065dc60858c472817d1d4759aa3f58fd79a86ac939381b13a520f6f"
    }
   }
  },
