--- a/src/doML.ipynb
+++ b/src/doML.ipynb
@@ -8,6 +8,8 @@
    "source": [
     "from mymodule import MLs\n",
     "from mymodule import myfunc as mf\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "import glob\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -31,38 +33,31 @@
    ],
    "source": [
     "TARGET = \"magfieldx\"\n",
+    "#それぞれ1番最後の'/'は忘れずつけること\n",
     "ALTIMAGES0 = root_dir + \"imgout/test_1227/\"#リコネクションなし分割済データフォルダ\n",
     "ALTIMAGES1 = root_dir + \"imgout/test1227/\"#リコネクションあり分割済データフォルダ\n",
-    "LABEL_SOURCE0 = root_dir + \"txt/labels0/\"#リコネクションありのラベリングcsv\n",
-    "LABEL_SOURCE1 = root_dir + \"txt/labels1/\"#リコネクションなしのラベリングcsv\n",
+    "LABEL_SOURCE0 = root_dir + \"txt/labels0/\"#リコネクションありのラベリングcsvのあるフォルダ\n",
+    "LABEL_SOURCE1 = root_dir + \"txt/labels1/\"#リコネクションなしのラベリングcsvのあるフォルダ\n",
     "IMGSHAPE = [10,100]#出来れば画像サイズはすべて同じで合ってほしい。違うサイズが混じる場合は最も多いサイズを指定すること\n",
-    "DO_PCA = False\n",
+    "DO_PCA = False #データ圧縮。IMGSHAPEと、データサイズが途方もなく多ければTrueにする。\n",
+    "randomstate = None #学習時のパラメータ。初期値はNone。結果を固定したければ1とかに設定する。\n",
     "\n",
-    "ML = MLs.ML(TARGET, ALTIMAGES0, ALTIMAGES1, LABEL_SOURCE0, LABEL_SOURCE1, IMGSHAPE, DO_PCA)"
+    "ML = MLs.ML(TARGET, ALTIMAGES0, ALTIMAGES1, LABEL_SOURCE0, LABEL_SOURCE1, IMGSHAPE, DO_PCA,randomstate=randomstate)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train : 0.6212121212121212\n",
-      "Test : 0.25\n",
-      "[1. 1. 1. 1. 0. 0. 1. 1. 1. 1. 0. 0. 1. 1. 0. 0. 0. 0. 1. 0. 0. 1. 0. 0.\n",
-      " 1. 0. 0. 0.]\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0       0.27      0.29      0.28        14\n",
-      "         1.0       0.23      0.21      0.22        14\n",
-      "\n",
-      "    accuracy                           0.25        28\n",
-      "   macro avg       0.25      0.25      0.25        28\n",
-      "weighted avg       0.25      0.25      0.25        28\n",
-      "\n"
+      "Train : 0.5757575757575758\n",
+      "Test : 0.42857142857142855\n",
+      "[0. 0. 0. 0. 0. 1. 0. 1. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0.\n",
+      " 0. 0. 0. 0.]\n"
      ]
     },
     {
@@ -75,77 +70,29 @@
     }
    ],
    "source": [
-    "# model = ML.linearSVC()\n",
+    "#学習\n",
+    "#モジュールに書いてるコードで実行\n",
+    "# model = ML.linearSVC()   \n",
+    "# ML.kneighbors()\n",
+    "# ML.rbfSVC()\n",
+    "# ML.XGBoost()\n",
     "\n",
     "#or\n",
-    "\n",
+    "#自由に記述し、MLクラスを利用して実行\n",
     "from sklearn.svm import LinearSVC\n",
-    "def mylinearSVC(self):\n",
+    "def mylinearSVC(self):    \n",
     "        model = LinearSVC(C=0.3, random_state=self.RANDOMSTATE) # インスタンスを生成\n",
-    "        model.fit(self.X_train_pca, self.y_train) # モデルの学習\n",
+    "        model.fit(self.X_train, self.y_train) # モデルの学習\n",
     "        # 学習データに対する精度\n",
-    "        print(\"Train :\", model.score(self.X_train_pca,  self.y_train)) \n",
+    "        print(\"Train :\", model.score(self.X_train, self.y_train)) \n",
     "        # テストデータに対する精度\n",
-    "        print(\"Test :\", model.score(self.X_test_pca, self.y_test)) \n",
+    "        print(\"Test :\", model.score(self.X_test, self.y_test)) \n",
     "        print(model.predict(self.X_test))\n",
     "        pred = model.predict(self.X_test)\n",
     "        svmres = pd.DataFrame(np.array([self.path_test, self.y_test, pred]).T, columns=[\"path\", \"y\", \"predict\"])\n",
     "        # print(classification_report(self.y_test, pred))\n",
     "        return model\n",
-    "mylinearSVC(ML)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Expected n_neighbors <= n_samples,  but n_samples = 66, n_neighbors = 77",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_16196\\1308030121.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mML\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkneighbors\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mkneighbors\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mn_neighbors\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# kの設定\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mKNeighborsClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_neighbors\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mn_neighbors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\lkxl1\\OneDrive\\デスクトップ\\research\\src\\mymodule\\MLs.py\u001b[0m in \u001b[0;36mkneighbors\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    228\u001b[0m         \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mX_train_pca\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# モデルの学習\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    229\u001b[0m         \u001b[1;31m# 精度\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 230\u001b[1;33m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Train :\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mX_train_pca\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    231\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Test :\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mX_test_pca\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    232\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\lkxl1\\Anaconda3\\lib\\site-packages\\sklearn\\base.py\u001b[0m in \u001b[0;36mscore\u001b[1;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[0;32m    649\u001b[0m         \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    650\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 651\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    652\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    653\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_more_tags\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\lkxl1\\Anaconda3\\lib\\site-packages\\sklearn\\neighbors\\_classification.py\u001b[0m in \u001b[0;36mpredict\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    212\u001b[0m             \u001b[0mClass\u001b[0m \u001b[0mlabels\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0meach\u001b[0m \u001b[0mdata\u001b[0m \u001b[0msample\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    213\u001b[0m         \"\"\"\n\u001b[1;32m--> 214\u001b[1;33m         \u001b[0mneigh_dist\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mneigh_ind\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkneighbors\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    215\u001b[0m         \u001b[0mclasses_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclasses_\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    216\u001b[0m         \u001b[0m_y\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_y\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\lkxl1\\Anaconda3\\lib\\site-packages\\sklearn\\neighbors\\_base.py\u001b[0m in \u001b[0;36mkneighbors\u001b[1;34m(self, X, n_neighbors, return_distance)\u001b[0m\n\u001b[0;32m    727\u001b[0m             raise ValueError(\n\u001b[0;32m    728\u001b[0m                 \u001b[1;34m\"Expected n_neighbors <= n_samples, \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 729\u001b[1;33m                 \u001b[1;34m\" but n_samples = %d, n_neighbors = %d\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mn_samples_fit\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_neighbors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    730\u001b[0m             )\n\u001b[0;32m    731\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Expected n_neighbors <= n_samples,  but n_samples = 66, n_neighbors = 77"
-     ]
-    }
-   ],
-   "source": [
-    "ML.kneighbors()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train : 0.5454545454545454\n",
-      "Test : 0.5\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "SVC(C=0.3, random_state=0)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ML.rbfSVC()"
+    "svm = mylinearSVC(ML)"
    ]
   },
   {
@@ -172,6 +119,7 @@
     }
    ],
    "source": [
+    "#参照可能なもの\n",
     "ML.PATH1\n",
     "ML.PATH0\n",
     "ML.ALLTARINDATA0\n",
@@ -179,36 +127,42 @@
     "ML.PATH0TEST\n",
     "ML.PATH1TEST\n",
     "ML.PATH0TRAIN\n",
-    "ML.PATH1TRAIN"
+    "ML.PATH1TRAIN\n",
+    "ML.X_test\n",
+    "ML.y_test\n",
+    "ML.path_test\n",
+    "ML.X_train\n",
+    "ML.y_train\n",
+    "ML.path_train\n",
+    "#後から変更可能なもの\n",
+    "ML.randomstate = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train : 0.6212121212121212\n",
-      "Test : 0.25\n",
-      "[1. 1. 1. 1. 0. 0. 1. 1. 1. 1. 0. 0. 1. 1. 0. 0. 0. 0. 1. 0. 0. 1. 0. 0.\n",
-      " 1. 0. 0. 0.]\n"
+      "LinearSVC(C=0.3)\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "print(\"Train :\", model.score(ML.X_train_pca,  ML.y_train)) \n",
-    "# テストデータに対する精度\n",
-    "print(\"Test :\", model.score(ML.X_test_pca, ML.y_test)) \n",
-    "print(model.predict(ML.X_test))\n",
-    "pred = model.predict(ML.X_test)\n",
-    "# svmres = pd.DataFrame(np.array([ML.path_test, ML.y_test, model.predict(X_test_pca)]).T, columns=[\"path\", \"y\", \"predict\"])\n",
-    "svmres = pd.DataFrame(np.array([ML.path_test, ML.y_test, pred]).T, columns=[\"path\", \"y\", \"predict\"])###################\n",
-    "# print(classification_report(ML.y_test, pred))"
+    "#学習モデルをファイルに保存、読み込み例\n",
+    "import pickle\n",
+    "path = \"pickletest\"\n",
+    "\n",
+    "file = open(path, \"wb\") \n",
+    "pickle.dump(svm, file)\n",
+    "file.close\n",
+    "\n",
+    "with open(path, 'rb') as f:\n",
+    "    dict = pickle.load(f)\n",
+    "print(svm)"
    ]
   },
   {
