--- a/src/makesepnpy.ipynb
+++ b/src/makesepnpy.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#magfieldx_49.52.6_47.773.npy\n",
     "from mymodule import myfunc as mf\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -87,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.1 (default, Dec 10 2018, 22:54:23) [MSC v.1915 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
